# spoteemix

./: .pre-commit-config.yaml  README.md  downloadPlaylist.py  pyproject.toml  requirements.txt
src/spoteemix/: __main__.py  commands.py  config_helper.py  main.py
src/spoteemix/convert/: file_spotify.py  file_to_spotify.py  spotify_deemix.py  spotify_to_deemix.py
src/spoteemix/helpers/: command_helpers.py
src/spoteemix/types/: spotify.py
src/spoteemix/utils/: albums_from_playlist.py  shuffle_spotify.py
