#!/usr/bin/env python3

[project]
name = "spoteemix"
version = "0.1"
description = "Script to download Spotify playlists using Deemix."
readme = "README.md"
authors = [
  { name = "Mihkel Martin Kasterpalu", email = "github@kasterpalu.ee" },
]
requires-python = ">=3.14.0"
dependencies = [
    "aiohttp>=3.13.5",
    "click>=8.3.2",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "selenium>=4.41.0",
    "spotipy>=2.26.0",
    "tqdm>=4.67.3",
]

[project.urls]
homepage = "https://github.com/MihkelMK/spoteemix"

[project.scripts]
spoteemix = "spoteemix.__main__:cli"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.uv]
exclude-newer = "1 week"
compile-bytecode = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
